# VersionSync-Tracker

./: CMakeLists.txt  README.md  config.h.in
src/: CMakeLists.txt  benchmark.c  bumpvers.c  fileops.c  fileops.h  utils.c  utils.h
test/: CMakeLists.txt  test_fileops.cpp  test_fileops_main.cpp
